fixing the spacing in the mobile view

--- a/chamber/styles/join_mobiles.css
+++ b/chamber/styles/join_mobiles.css
@@ -126,6 +126,7 @@
 
     #c {
         width: 18px;
-        margin-left: -1rem;
+        margin-right: -0.1rem;
+        
     }
 }
